fixed display issue (scrollbars) and minor bugs

--- a/app/assets/stylesheets/codemirror.less
+++ b/app/assets/stylesheets/codemirror.less
@@ -19,7 +19,7 @@
 
 .CodeMirror-scroll {
   /* Set scrolling behaviour here */
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* PADDING */
